# SEP4

./: .gitignore  LICENSE  README.md
.github/workflows/: IoT_test.yml  c-cpp.yml  cmake.yml  dotnet.yml  dotnetCD.yml  dotnetDevCI.yml  dotnetMainCI.yml  iot.yml
C#/: C#.sln  SEP4.sln
C#/Application/DaoInterfaces/: IDoctorDao.cs  ILoriotDao.cs  IPatientDao.cs  IReceptionistDao.cs  IRequestDao.cs  IRoomDao.cs  ISensorDao.cs  IUserDao.cs
C#/Application/Logic/: DoctorLogic.cs  PatientLogic.cs  ReceptionistLogic.cs  RequestLogic.cs  RoomLogic.cs  SensorLogic.cs  UserLogic.cs
C#/Application/LogicInterfaces/: IDoctorLogic.cs  IPatientLogic.cs  IReceptionistLogic.cs  IRequestLogic.cs  IRoomLogic.cs  ISensorLogic.cs  IUserLogic.cs
C#/Domain/: Class1.cs  Domain.csproj
C#/Domain/Auth/: AuthorizationPolicies.cs
C#/Domain/DTOs/: DoctorCreationDto.cs  DoctorUpdateDto.cs  PatientCreationDto.cs  ReceptionistCreationDto.cs  ReceptionistUpdateDto.cs  RequestCreationDto.cs  RoomCreationDto.cs  RoomUpdateDto.cs  SearchUserParameterDto.cs  SensorCreationDto.cs  SensorUpdateDto.cs  SensorValueDto.cs  UserCreationDto.cs  UserLoginDto.cs
C#/Domain/Models/: Admin.cs  Doctor.cs  Patient.cs  Receptionist.cs  Request.cs  Room.cs  Sensor.cs  SensorValue.cs  User.cs
C#/EfcDataAccess/: DoctorEfcDao.cs  EfcDataAccess.csproj  Hospital.db  Hospital.db-shm  Hospital.db-wal  HospitalContext.cs  PatientEfcDao.cs  ReceptionistEfcDao.cs  RequestEfcDao.cs  RoomEfcDao.cs  SensorEfcDao.cs  SensorValueEfcDao.cs  UserEfcDao.cs
C#/EfcDataAccess/Migrations/: 20230327150415_InitialCreate.Designer.cs  20230328180216_InitialCreate.Designer.cs  20230328180216_InitialCreate.cs  20230508134704_InitialCreate.Designer.cs  20230508134704_InitialCreate.cs  20230509184528_InitialCreate.Designer.cs  20230521231106_InitialCreate.Designer.cs  20230522104858_InitialCreate.Designer.cs  20230522104858_InitialCreate.cs  20230526081656_InitialCreate.Designer.cs  20230527134432_InitialCreate.Designer.cs  HospitalContextModelSnapshot.cs
C#/FileData/: DataContainer.cs  FileContext.cs
C#/FileData/DAOs/: RoomFileDao.cs  SensorFileDao.cs
C#/TestProject1/: TestProject1.csproj
C#/Testing/: Testing.csproj
C#/Testing/ApplicationTesting/: DoctorLogicTest.cs  PatientLogicTest.cs  ReceptionistLogicTest.cs  RequestLogicTest.cs  RoomLogicTest.cs  SensorLogicTest.cs
C#/Testing/DaoTesting/: ReceptionistEfcDaoTest.cs
C#/Testing/WebAPITesting/: DoctorsControllerTest.cs  PatientsControllerTest.cs  (+5 more)
C#/Web API/: Dockerfile  Web API.csproj
C#/WebAPI/: Dockerfile  Program.cs  WeatherForecast.cs  WebAPI.csproj  WebApiTests.http  appsettings.Development.json  appsettings.Production.json  appsettings.json  data.json
C#/WebSocketIoT/: CsharpServer.cs  WebSocketIoT.csproj
IoT/: SEP4.atsln
IoT/SEP4/: CMakeLists.txt  CMakelists.txt  Cmakelists.txt  IoT.atmel.atsln  IoT.atmel.cproj  IoTAtmel.componentinfo.xml  IoTAtmel.cproj  LoRaWANHandler.c  main.c  main_example.c  main_toDo.c
IoT/SEP4/Test/: CMakeLists.txt  Cmakelists.txt  Co2Test.cpp  CounterTest.cpp  Humi_temp_test.cpp  ReceiverTest.cpp  SenderTest.cpp  ServoTest.cpp
IoT/SEP4/Test/FreeRTOS_defs/: ATMEGA_FreeRTOS.h  FreeRTOS.h  FreeRTOS_FFF_MocksDeclaration.h  FreeRTOS_FFF_MocksDefinitions.cpp  message_buffer.h  semphr.h  task.h  timers.h
IoT/SEP4/mockTesting/Test/: CMakeLists.txt  VibeHealthTest.cpp
SEP4/: SEP4.sln
SEP4/Web API/: Dockerfile  Web API.csproj
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
guidelines+templates/: 2018 Group Contract Template - VIA Engineering Guidelines.docx  2018 Group Formation and Topic Selection Template - VIA Engineering Guidelines.docx  2018 Process Report Template - VIA Engineering Guidelines.docx  2019 Semester and Bachelor Project Report Template - VIA Software Engineering Guidelines.docx  2019 Support Document Project Description.docx  SEP4 requirements.docx
pages/: RoomDetails.js  _app.js  index.js
pages/rooms/: [roomId].js
(+464 files in other folders)
